[tool.poetry]
name = "qiufeng"
version = "1.1.2"
description = "This is my first package"
authors = ["qiufeng <appleidqiufeng@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
